--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "com.unity.ide.rider": "3.0.22",
     "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.xr.oculus": "3.2.3",
     "com.unity.xr.openxr": "1.5.3",
+    "net.harrybosch.handyvr": "https://github.com/HarryBosch03/HandyVR.git#unstable",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
