--- a/Assets/Code/ShootingRangeGame.asmdef
+++ b/Assets/Code/ShootingRangeGame.asmdef
@@ -2,7 +2,8 @@
     "name": "ShootingRangeGame",
     "rootNamespace": "ShootingRangeGame",
     "references": [
-        "GUID:f5994f738c881fe479e6d7d2dcb9f019"
+        "GUID:f5994f738c881fe479e6d7d2dcb9f019",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
