--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.0.0-exp.4",
     "com.unity.ide.rider": "3.0.22",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.probuilder": "5.0.7",
