Made game better

--- a/Assets/Code/Editor/ShootingRangeGame.Editor.asmdef
+++ b/Assets/Code/Editor/ShootingRangeGame.Editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "ShootingRangeGame.Editor",
-    "rootNamespace": "ShootingRangeGame",
+    "rootNamespace": "ShootingRangeGameEditor",
     "references": ["GUID:5c67e48833557904b9e8f9338c9a842e"],
     "includePlatforms": [
         "Editor"
