--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "com.unity.ai.navigation": "1.0.0-exp.4",
     "com.unity.ide.rider": "3.0.22",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.probuilder": "5.0.7",
+    "com.unity.recorder": "3.0.3",
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.xr.oculus": "3.2.3",
