--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.marijnzwemmer.unity-toolbar-extender": "https://github.com/marijnz/unity-toolbar-extender.git#unity_2021",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.rider": "3.0.22",
     "com.unity.ide.visualstudio": "2.0.18",
@@ -7,6 +8,7 @@
     "com.unity.recorder": "3.0.3",
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.textmeshpro": "3.0.6",
+    "com.unity.xr.mock-hmd": "1.3.1-preview.1",
     "com.unity.xr.oculus": "3.2.3",
     "com.unity.xr.openxr": "1.5.3",
     "com.unity.modules.ai": "1.0.0",
