--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.marijnzwemmer.unity-toolbar-extender": "https://github.com/marijnz/unity-toolbar-extender.git#unity_2021",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.formats.fbx": "4.1.3",
     "com.unity.ide.rider": "3.0.22",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.probuilder": "5.0.7",
